renamed "bootstrap-input-spinner.js" to "input-spinner.js"

--- a/test/native-number-input.html
+++ b/test/native-number-input.html
@@ -79,7 +79,7 @@ First: Native Element, second: bootstrap-input-spinner.
 
 <script src="../node_modules/jquery/dist/jquery.min.js"></script>
 <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="../src/bootstrap-input-spinner.js"></script>
+<script src="../src/input-spinner.js"></script>
 <script src="../node_modules/prismjs/prism.js"></script>
 <script>
     $(".bootstrap-input-spinner").inputSpinner()
