--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ $inputLoop.on("change", function (event) {
     <div class="card my-5 border-info">
         <a href="https://shaack.com/en/open-source-components">
             <div class="card-body">
-                <h4 class="mb-2">More Bootstrap 4 Components (from shaack.com)</h4>
+                <h4 class="mb-2">More Bootstrap 4 components (from shaack.com)</h4>
                 You may want to check out our further Bootstrap 4 extensions,
                 <b>bootstrap-show-modal</b> and
                 <b>bootstrap-detect-breakpoint</b>.
