--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ $inputLoop.on("change", function (event) {
 
     <p>The simplest custom Editor is the <code>RawEditor</code>, it renders just the value und parses just the value,
         without any
-        changes, like a native number input. No internationalization, no digit grouping. It looks like this:</p>
+        changes, like a native number input. No internationalization, no digit grouping.</p>
     <p>
         <input id="rawEditor" value="1000"/>
     </p>
