--- a/test/test-pages/test-bug-98.html
+++ b/test/test-pages/test-bug-98.html
@@ -32,7 +32,7 @@
 </div>
 <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
 <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="../../src/input-spinner.js"></script>
+<script src="../../src/bootstrap-input-spinner.js"></script>
 <script>
     $('input').inputSpinner()
     $(document).on('change', 'input#source_b', function (e) {
