--- a/test/test.html
+++ b/test/test.html
@@ -15,7 +15,7 @@
 <script>mocha.setup('bdd')</script>
 <script src="../node_modules/jquery/dist/jquery.min.js"></script>
 <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="../src/input-spinner.js"></script>
+<script src="../src/bootstrap-input-spinner.js"></script>
 
 <script src="./test.js"></script>
 <script>
