More documentation about this version is Bootstrap 5 compatible and how to get the Boostrap 4 compatible version

--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
 <section class="container py-5">
     <h1>bootstrap-input-spinner</h1>
     <p>
-        A Bootstrap 5 / jQuery plugin to create input spinner elements for number input, by
-        <a href="https://shaack.com/en">shaack.com</a> engineering.
+        A Bootstrap / jQuery plugin to create input spinner elements for number input, by
+        <a href="https://shaack.com/en">shaack.com</a> engineering. For now it needs jQuery, but I am working on it.
     </p>
+    <p>This version is compatible with Bootstrap 5, but we remain a Bootstrap 4 compatible version with the branch
+        <a href="https://github.com/shaack/bootstrap-input-spinner/tree/bootstrap4-compatible">bootstrap4-compatible</a>. npm versions 3.x are Bootstrap 5 compatible, versions 2.x Bootstrap 4 compatible.</p>
     <p>
         License: <a href="https://github.com/shaack/bootstrap-input-spinner/blob/master/LICENSE">MIT</a>
     </p>
     <h2>Features</h2>
-    <p>The Bootstrap 5 InputSpinner</p>
+    <p>The Bootstrap InputSpinner</p>
     <ul>
         <li>
             is <b>mobile friendly</b> and <b>responsive</b>,
@@ -469,8 +471,8 @@ $inputLoop.on("change", function (event) {
     <div class="card my-5 border-info">
         <a href="https://shaack.com/en/open-source-components">
             <div class="card-body">
-                <h4 class="mb-2">More Bootstrap 5 components (from shaack.com)</h4>
-                You may want to check out our further Bootstrap 5 extensions,
+                <h4 class="mb-2">More Bootstrap components (from shaack.com)</h4>
+                You may want to check out our further Bootstrap extensions,
                 <b>bootstrap-show-modal</b> and
                 <b>bootstrap-detect-breakpoint</b>.
             </div>
